<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_Statemachine_State" Id="{97c3ac06-ac6b-4756-a334-6e31d55f846d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Statemachine_State :
(
    Not_ready_to_switch_on  := 0,
    Switch_on_disabled      := 1,
    Ready_to_switch_on      := 2,
    Switched_on             := 3,
    Operation_enabled       := 4,
    Quick_stop_active       := 5,
    Fault_reaction_active   := 6,
    Fault                   := 7,

    unknown                 := 255
) BYTE ;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>